# hello-worlds

./: README.md
go/: Makefile  README.md  go.mod  hello.go  hello_test.go
java/: README.md  settings.gradle.kts
java/app/: build.gradle.kts
java/app/src/main/java/scot/launchquickly/: App.java
java/app/src/test/java/scot/launchquickly/: AppTest.java
kotlin/: README.md  settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/scot/launchquickly/: App.kt
kotlin/app/src/test/kotlin/scot/launchquickly/: AppTest.kt
python/: .gitignore  Makefile  README.md  pyproject.toml
python/src/hello_world/: app.py
python/tests/: test_app.py
rust/: Makefile  README.md
rust/src/: main.rs
